[package]
name = "obs-gpmdp"
version = "0.1.0"
authors = ["Matthew Donoughe <mdonoughe@gmail.com>"]

[lib]
name = "gpmdp"
crate-type = ["dylib"]

[dependencies]
futures = { version = "0.1.18", default-features = false, features = ["use_std"] }
hyper = { version = "0.11.18", default-features = false }
hyper-tls = "0.1.2"
image = { version = "0.18.0", default-features = false, features = ["jpeg", "png_codec", "webp"] }
lazy_static = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1.12"
websocket = { version = "0.20.2", default-features = false, features = ["async"] }

[build-dependencies]
bindgen = "0.26.3"

[patch.crates-io]
schannel = { git = "https://github.com/mdonoughe/schannel-rs", branch = "intermediate" }
