[package]
name = "obs-gpmdp"
version = "0.1.0"
authors = ["Matthew Donoughe <mdonoughe@gmail.com>"]

[lib]
name = "gpmdp"
crate-type = ["cdylib"]

[dependencies]
futures = { version = "0.1", default-features = false, features = ["use_std"] }
hyper = { version = "0.11", default-features = false }
hyper-tls = "0.1"
image = { version = "0.19", default-features = false, features = ["jpeg", "png_codec", "webp"] }
lazy_static = "1.0"
libobs-sys = { path = "../libobs-sys" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tera = "0.11"
tokio-core = "0.1"
websocket = { version = "0.20", default-features = false, features = ["async"] }
